--- a/public/home.html
+++ b/public/home.html
@@ -101,14 +101,12 @@
 
 
     <!--  -->
-
     <section class="bg-white my-20 text-center">
         <div class="mx-auto max-w-7x1 px-6 sm:px-8 md:px-12">
             <h2 class="mt-3 font-semibold lg:text-3xl text-xl">New Arrival Products</h2>
             <p class="mx-auto my-5 max-w-xl text-base text-slate-400">Shop the latest products from the most popular
                 collections
             </p>
-
             <div
                 class="mt-20 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-4 max-w-[70rem] mx-auto">
 
@@ -1224,9 +1222,41 @@
             </div>
             <!--  -->
         </div>
-        </div>
     </section>
     <!--  -->
+
+
+    <!--  -->
+
+    <section class="py-24 w-full table relative bg-center bg-no-repeat bg-cover"
+        style="background: url(/assest/bg6.jpg) center no-repeat; background-color: rgb(255, 124, 218);">
+        <div class="container relative">
+            <div class="grid grid-cols-1 text-center mx-auto">
+                <h3 class="font-semibold text-3xl leading-normal mb-4 text-white">End of Season Clearance <br> Sale upto
+                    30%</h3>
+
+                <p class="text-white/80 max-w-xl mx-auto">Upgrade your style with our curated sets. Choose confidence,
+                    embrace your unique look.</p>
+
+                <div class="mt-6">
+                    <a href="sale.html"
+                        class="py-2 px-5 flex items-center mx-auto w-max font-semibold tracking-wide align-middle text-center bg-white text-orange-500 rounded-md"> 
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 mr-2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>
+                          
+                        Shop Now
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--  -->
+
+
+
+
 
 
 </body>
